# matura-2025-r25-3a-szawarma

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
src/: main  main.cpp  main.py  main2.py  wynik_2_2.txt  wyniki3.txt
tests/: compare_files.sh
